--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Function to display a list in a more grammatical fashion",
   "main": "module.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive"
   },
   "author": "John Beech",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  }
 }
